# learn_stuff

./: links.md
admin/: Dedicated
bazelaws/: BUILD.bazel  WORKSPACE
bazelaws/src/: Main.java
bitrix/batch/: batch.md  index.js
bitrix/eventhandler/: index.js  package-lock.json  package.json
bitrix/hook-client/: index.html
bitrix/oauth/: index.js  package-lock.json  package.json
bitrix/rest/: README.md  index.js  package-lock.json  package.json
conda/: CHEATSHEET.md
dante/: danted.conf
docker/: CHEATSHEET.md
gpg/: Useful commands.md  gpg-agent.conf
kubernetes/: cheatsheet.md
linux-common/: create-disk-on-file.sh
logging/: thoughts.md
networking/: Banana Router.md  OpenWrt.md  VPN.md
rabbitmq/: cheatsheet.md
superset/: README
tex/: claim.tex  commands.md  test.tex
vagrant/: Vagrantfile_multimachine  Vagrantfile_stuff  WorkAround.md
zmq/: README.txt
zmq/groupchat/: CMakeLists.txt  client.cpp  client_multithreaded.cpp  groupchat.h  server.cpp
